--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>circle top</title>
+    <style>
+        .circle{
+            height: 200px;
+            width: 200px;
+            border-radius: 50%;
+            background-color: aqua;
+            border: 2px solid green;
+            
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="circle"></div>
 </body>
 </html>
